# browser-video-lab-rust-first

./: .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yml  index.html  package-lock.json  package.json  railway.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml  models.yml  release.yml  train.yml
kaggle/: README.md  run_chunk.py
public/: coi-serviceworker.js
public/models/longlive/: manifest.example.json
public/models/memflow/: manifest.example.json
public/models/onnx/: manifest.example.json
public/models/sd/: manifest.example.json
python/: benchmark_wan21.py  requirements-distill.txt  requirements-wan.txt  smash_wan21.py
python/longlive_distill/: ADAPTER.md  __init__.py  cache_teacher.py  export.py  losses.py  model.py  train.py
python/longlive_distill/configs/: browser-384m-umt5.yaml  browser-384m.yaml  smoke.yaml
rust/: Cargo.toml  README.md
rust/.cargo/: config.toml
rust/config/: browser-390m-umt5.json  browser-390m.json  browser-demo.json  browser-smoke.json
rust/crates/video-cli/: Cargo.toml
rust/crates/video-cli/src/: main.rs
rust/crates/video-contract/: Cargo.toml
rust/crates/video-contract/src/: lib.rs
rust/crates/video-native/: Cargo.toml
rust/crates/video-native/src/: main.rs
rust/crates/video-student/: Cargo.toml
rust/crates/video-student/src/: lib.rs
rust/crates/video-train/: Cargo.toml
rust/crates/video-train/src/: lib.rs  main.rs
rust/crates/video-web/: Cargo.toml
rust/crates/video-web/src/: lib.rs
scripts/: check-models.mjs  kaggle-orchestrate.mjs  model-manifest.mjs
server/: index.mjs
src/: main.ts  style.css  worker.ts
src/runtime/: common.test.ts  common.ts  longlive.ts  memflow.ts  memory-bank.test.ts  memory-bank.ts  onnx-student.ts  rust-video.ts  sd-turbo.ts
