[package]
name = "video-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
clap.workspace = true
half.workspace = true
safetensors.workspace = true
serde.workspace = true
serde_json.workspace = true
video-contract = { path = "../video-contract" }

