[package]
name = "video-native"
version.workspace = true
edition.workspace = true
license.workspace = true
[dependencies]
anyhow.workspace = true
burn.workspace = true
clap.workspace = true
serde_json.workspace = true
video-contract = { path = "../video-contract" }
video-student = { path = "../video-student" }

